Increased pro-export-title z-index to fix overlapping issue with editing icon

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -483,7 +483,7 @@ tr[aria-expanded="true"] {
         transform: translateX(-50%);
         width: max-content;
         border-radius: 4px;
-        z-index: 1;
+        z-index: 2;
         a {
             text-decoration: underline;
         }
